computed optimal parameters for the rbf kernel

--- a/Tests Jonas/optimal_opu_kernel_parameters.ipynb
+++ b/Tests Jonas/optimal_opu_kernel_parameters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "D_OUT = 10000"
+    "D_OUT = 1000"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,6 +469,275 @@
     "    print(variance, clf.cv_results_['mean_test_score'])\n",
     "    \n",
     "    print('Time per var.', time.time() - since)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RBF Optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.kernel_approximation import RBFSampler\n",
+    "\n",
+    "class RBFModuleNumpy(object):\n",
+    "    def __init__(self, input_features, output_features, gamma='auto', dtype='float32'):\n",
+    "        super(RBFModuleNumpy, self).__init__()\n",
+    "        \n",
+    "        if gamma=='auto':\n",
+    "            gamma = 1. / input_features\n",
+    "        \n",
+    "        self.sampler = RBFSampler(gamma=gamma, n_components=output_features, random_state=1)\n",
+    "        \n",
+    "    def forward(self, data):\n",
+    "        if not hasattr(self.sampler, 'random_weights_'):\n",
+    "            return self.sampler.fit_transform(data)\n",
+    "        else:\n",
+    "            return self.sampler.transform(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0012755102040816326"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 / 784"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = {'alpha':[0.1, 1, 10, 100]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------\n",
+      "Gamma: 0.001\n",
+      "Variance: 1 [0.85918333 0.85918333 0.85918333 0.85918333]\n",
+      "Time per var. 12.16813611984253\n",
+      "Variance: 0.1 [0.85918333 0.85918333 0.85918333 0.85918333]\n",
+      "Time per var. 11.295588731765747\n",
+      "Variance: 0.01 [0.85918333 0.85918333 0.85918333 0.85918333]\n",
+      "Time per var. 11.923964500427246\n",
+      "Variance: 0.001 [0.85918333 0.85918333 0.85918333 0.8592    ]\n",
+      "Time per var. 11.163521766662598\n",
+      "Variance: 0.0001 [0.85918333 0.8592     0.8592     0.85851667]\n",
+      "Time per var. 11.82567048072815\n",
+      "Variance: 1e-05 [0.8592     0.85851667 0.85306667 0.83258333]\n",
+      "Time per var. 12.034701585769653\n",
+      "-----------------------\n",
+      "Gamma: 0.002\n",
+      "Variance: 1 [0.86108333 0.86108333 0.86108333 0.86108333]\n",
+      "Time per var. 11.968480110168457\n",
+      "Variance: 0.1 [0.86108333 0.86108333 0.86108333 0.86108333]\n",
+      "Time per var. 11.695809125900269\n",
+      "Variance: 0.01 [0.86108333 0.86108333 0.86108333 0.86108333]\n",
+      "Time per var. 12.141483545303345\n",
+      "Variance: 0.001 [0.86108333 0.86108333 0.86108333 0.86108333]\n",
+      "Time per var. 11.769330501556396\n",
+      "Variance: 0.0001 [0.86108333 0.86108333 0.86108333 0.86105   ]\n",
+      "Time per var. 11.702800750732422\n",
+      "Variance: 1e-05 [0.86108333 0.86105    0.8608     0.85851667]\n",
+      "Time per var. 11.457618713378906\n",
+      "-----------------------\n",
+      "Gamma: 0.003\n",
+      "Variance: 1 [0.86171667 0.86171667 0.86171667 0.86171667]\n",
+      "Time per var. 11.658433675765991\n",
+      "Variance: 0.1 [0.86171667 0.86171667 0.86171667 0.86171667]\n",
+      "Time per var. 11.85697317123413\n",
+      "Variance: 0.01 [0.86171667 0.86171667 0.86171667 0.86171667]\n",
+      "Time per var. 11.6456880569458\n",
+      "Variance: 0.001 [0.86171667 0.86171667 0.86171667 0.86171667]\n",
+      "Time per var. 11.38069462776184\n",
+      "Variance: 0.0001 [0.86171667 0.86171667 0.86171667 0.86171667]\n",
+      "Time per var. 11.562122821807861\n",
+      "Variance: 1e-05 [0.86171667 0.86171667 0.86171667 0.86166667]\n",
+      "Time per var. 11.209943532943726\n",
+      "-----------------------\n",
+      "Gamma: 0.004\n",
+      "Variance: 1 [0.86175 0.86175 0.86175 0.86175]\n",
+      "Time per var. 11.432694911956787\n",
+      "Variance: 0.1 [0.86175 0.86175 0.86175 0.86175]\n",
+      "Time per var. 11.67415475845337\n",
+      "Variance: 0.01 [0.86175 0.86175 0.86175 0.86175]\n",
+      "Time per var. 11.436401128768921\n",
+      "Variance: 0.001 [0.86175 0.86175 0.86175 0.86175]\n",
+      "Time per var. 11.313885688781738\n",
+      "Variance: 0.0001 [0.86175    0.86175    0.86175    0.86176667]\n",
+      "Time per var. 11.685026407241821\n",
+      "Variance: 1e-05 [0.86175    0.86176667 0.86176667 0.86138333]\n",
+      "Time per var. 11.745344638824463\n",
+      "-----------------------\n",
+      "Gamma: 0.005\n",
+      "Variance: 1 [0.86255 0.86255 0.86255 0.86255]\n",
+      "Time per var. 11.941966772079468\n",
+      "Variance: 0.1 [0.86255 0.86255 0.86255 0.86255]\n",
+      "Time per var. 11.480597972869873\n",
+      "Variance: 0.01 [0.86255 0.86255 0.86255 0.86255]\n",
+      "Time per var. 11.679246664047241\n",
+      "Variance: 0.001 [0.86255 0.86255 0.86255 0.86255]\n",
+      "Time per var. 11.539829015731812\n",
+      "Variance: 0.0001 [0.86255    0.86255    0.86256667 0.86256667]\n",
+      "Time per var. 11.468081712722778\n",
+      "Variance: 1e-05 [0.86256667 0.86256667 0.86245    0.8618    ]\n",
+      "Time per var. 12.057320833206177\n",
+      "-----------------------\n",
+      "Gamma: 0.006\n",
+      "Variance: 1 [0.86225 0.86225 0.86225 0.86225]\n",
+      "Time per var. 11.92665719985962\n",
+      "Variance: 0.1 [0.86225 0.86225 0.86225 0.86225]\n",
+      "Time per var. 11.848952293395996\n",
+      "Variance: 0.01 [0.86225 0.86225 0.86225 0.86225]\n",
+      "Time per var. 11.759045600891113\n",
+      "Variance: 0.001 [0.86225 0.86225 0.86225 0.86225]\n",
+      "Time per var. 11.74621033668518\n",
+      "Variance: 0.0001 [0.86225    0.86225    0.86225    0.86223333]\n",
+      "Time per var. 11.82189416885376\n",
+      "Variance: 1e-05 [0.86225    0.86223333 0.86208333 0.86176667]\n",
+      "Time per var. 11.566447496414185\n",
+      "-----------------------\n",
+      "Gamma: 0.007\n",
+      "Variance: 1 [0.86206667 0.86206667 0.86206667 0.86206667]\n",
+      "Time per var. 11.617447137832642\n",
+      "Variance: 0.1 [0.86206667 0.86206667 0.86206667 0.86206667]\n",
+      "Time per var. 11.712217092514038\n",
+      "Variance: 0.01 [0.86206667 0.86206667 0.86206667 0.86206667]\n",
+      "Time per var. 11.292552709579468\n",
+      "Variance: 0.001 [0.86206667 0.86206667 0.86206667 0.86206667]\n",
+      "Time per var. 11.361237287521362\n",
+      "Variance: 0.0001 [0.86206667 0.86206667 0.86206667 0.86205   ]\n",
+      "Time per var. 11.661955118179321\n",
+      "Variance: 1e-05 [0.86206667 0.86205    0.86208333 0.8618    ]\n",
+      "Time per var. 11.38692045211792\n",
+      "-----------------------\n",
+      "Gamma: 0.008\n",
+      "Variance: 1 [0.86126667 0.86126667 0.86126667 0.86126667]\n",
+      "Time per var. 11.678353548049927\n",
+      "Variance: 0.1 [0.86126667 0.86126667 0.86126667 0.86126667]\n",
+      "Time per var. 11.23316216468811\n",
+      "Variance: 0.01 [0.86126667 0.86126667 0.86126667 0.86126667]\n",
+      "Time per var. 11.253663063049316\n",
+      "Variance: 0.001 [0.86126667 0.86126667 0.86126667 0.86126667]\n",
+      "Time per var. 11.594152688980103\n",
+      "Variance: 0.0001 [0.86126667 0.86126667 0.86126667 0.86126667]\n",
+      "Time per var. 11.617887258529663\n",
+      "Variance: 1e-05 [0.86126667 0.86126667 0.86123333 0.86091667]\n",
+      "Time per var. 11.429450273513794\n",
+      "-----------------------\n",
+      "Gamma: 0.009000000000000001\n",
+      "Variance: 1 [0.8605 0.8605 0.8605 0.8605]\n",
+      "Time per var. 11.75043797492981\n",
+      "Variance: 0.1 [0.8605 0.8605 0.8605 0.8605]\n",
+      "Time per var. 11.477277994155884\n",
+      "Variance: 0.01 [0.8605 0.8605 0.8605 0.8605]\n",
+      "Time per var. 11.127584457397461\n",
+      "Variance: 0.001 [0.8605 0.8605 0.8605 0.8605]\n",
+      "Time per var. 11.441106081008911\n",
+      "Variance: 0.0001 [0.8605 0.8605 0.8605 0.8605]\n",
+      "Time per var. 11.388782024383545\n",
+      "Variance: 1e-05 [0.8605     0.8605     0.86048333 0.86048333]\n",
+      "Time per var. 11.426418542861938\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for gamma in [1, 0.1, 0.01, 0.001, 0.0001, 0.00001]:\n",
+    "for gamma in np.arange(0.001, 0.01, 0.001):\n",
+    "    print('-----------------------')\n",
+    "    print('Gamma: {}'.format(gamma))\n",
+    "    rbfm = RBFModuleNumpy(784, D_OUT, gamma=gamma)\n",
+    "    rbf_projection = rbfm.forward(train_data_bin)\n",
+    "    raw_scale_rbf = (rbf_projection / active_pixels_train).mean()\n",
+    "    \n",
+    "    for variance in [1, 0.1, 0.01, 0.001, 0.0001, 0.00001]:\n",
+    "        since = time.time()\n",
+    "\n",
+    "        factor = variance / raw_scale_rbf\n",
+    "\n",
+    "        model = RidgeClassifier()\n",
+    "        clf = GridSearchCV(model, parameters, cv=4, n_jobs=-1)\n",
+    "\n",
+    "        clf.fit(factor * rbf_projection, train_labels)\n",
+    "        print('Variance: {}'.format(variance),  clf.cv_results_['mean_test_score'])\n",
+    "\n",
+    "        print('Time per var.', time.time() - since)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gamma: 0.005\n",
+    "# Variance: 0.0001 [0.86255    0.86255    0.86256667 0.86256667]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rbfm = RBFModuleNumpy(784, 10000, gamma=0.005)\n",
+    "rbf_projection = rbfm.forward(np.vstack([train_data_bin, test_data_bin]))\n",
+    "raw_scale_rbf = (rbf_projection / np.vstack([active_pixels_train, active_pixels_test])).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8839\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test score\n",
+    "variance = 0.0001\n",
+    "alpha = 10\n",
+    "\n",
+    "factor = variance / raw_scale_rbf\n",
+    "\n",
+    "clf = RidgeClassifier(alpha=alpha)\n",
+    "clf.fit(factor * rbf_projection[:60000], train_labels)\n",
+    "print(clf.score(factor * rbf_projection[60000:], test_labels))"
    ]
   },
   {
